@@ -433,6 +433,27 @@ const collectFiles = (dir) => {
   return out;
 };
 
+const listStageResidue = (dir) => {
+  if (!fs.existsSync(dir)) return [];
+  const out = [];
+  const walk = (cur, base) => {
+    const entries = fs.readdirSync(cur, { withFileTypes: true });
+    entries.sort((a, b) => cmp(a.name, b.name));
+    entries.forEach((entry) => {
+      const relPath = path.join(base, entry.name).split(path.sep).join("/");
+      if (entry.name.toLowerCase().endsWith(".stage")) {
+        out.push(relPath);
+        return;
+      }
+      if (entry.isDirectory()) {
+        walk(path.join(cur, entry.name), relPath);
+      }
+    });
+  };
+  walk(dir, "");
+  return out;
+};
+
 const findPriorRunByIdempotenceKey = (idempotenceKey) => {
   ensureDir(HISTORY_ROOT);
   const runs = fs
@@ -942,6 +963,11 @@ const main = () => {
       status: "SKIP",
       reasonCodes: ["VERIFY360_DEPENDENCY_MISSING"],
     });
+    addStep({
+      id: "stage_residue",
+      status: "SKIP",
+      reasonCodes: ["VERIFY360_DEPENDENCY_MISSING"],
+    });
     recordCapability("fixture.deterministic_input", false, ["VERIFY360_INPUT_FIXTURE_MISSING"]);
     recordCapability("cli.safe_run", false, ["VERIFY360_DEPENDENCY_MISSING"]);
     recordCapability("runtime.privacy_lint", false, ["VERIFY360_DEPENDENCY_MISSING"]);
@@ -1048,6 +1074,25 @@ const main = () => {
         reasonCodes: stableSortUnique(cmpReasons),
       });
       recordCapability("cli.compare", cmpOk, cmpReasons);
+
+      const stageResidues = []
+        .concat(listStageResidue(outA).map((relPath) => `runA:${relPath}`))
+        .concat(listStageResidue(outB).map((relPath) => `runB:${relPath}`))
+        .concat(listStageResidue(outCompare).map((relPath) => `compare:${relPath}`));
+      const hasStageResidue = stageResidues.length > 0;
+      addStep({
+        id: "stage_residue",
+        status: hasStageResidue ? "FAIL" : "PASS",
+        reasonCodes: hasStageResidue ? ["VERIFY360_STAGE_RESIDUE_PRESENT"] : [],
+        details: hasStageResidue
+          ? {
+              count: stageResidues.length,
+              samples: stageResidues.slice(0, 5),
+            }
+          : {
+              count: 0,
+            },
+      });
     } else {
       addStep({
         id: "privacy_lint_pair",
@@ -1056,6 +1101,11 @@ const main = () => {
       });
       addStep({
         id: "compare_smoke",
+        status: "SKIP",
+        reasonCodes: ["VERIFY360_DEPENDENCY_MISSING"],
+      });
+      addStep({
+        id: "stage_residue",
         status: "SKIP",
         reasonCodes: ["VERIFY360_DEPENDENCY_MISSING"],
       });
